fix spacing on sidebar menu

--- a/less/style.less
+++ b/less/style.less
@@ -127,6 +127,9 @@ header.navbar-default {
 		font-size: 23px;
 		line-height: 23px;
 	}
+	& ul.nav {
+		width: 100%;
+	}
 }
 
 
